--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,9 +2,10 @@
 nodaemon=true
 
 [program:xvfb]
-command=/usr/bin/Xvfb :99 -screen 0 1920x1080x16
+command=/usr/bin/Xvfb :99 -screen 0 ${RESOLUTION}x16
 autorestart=true
 priority=1
+environment=DISPLAY=:99,RESOLUTION=1920x1080
 
 [program:x11vnc]
 command=/usr/bin/x11vnc -display :99 -forever -nopw
@@ -22,4 +23,3 @@ command=/opt/novnc/utils/novnc_proxy --vnc localhost:5900 --listen 8081
 directory=/opt/novnc
 autorestart=true
 priority=4
-
