--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,13 +2,12 @@
 nodaemon=true
 
 [program:xvfb]
-command=/usr/bin/Xvfb :99 -screen 0 ${RESOLUTION}x16
+command=/usr/bin/Xvfb :99 -screen 0 1920x1080x16
 autorestart=true
 priority=1
-environment=DISPLAY=:99,RESOLUTION=1920x1080
 
 [program:x11vnc]
-command=/usr/bin/x11vnc -display :99 -forever -nopw
+command=/usr/bin/x11vnc -display :99 -forever -usepw
 autorestart=true
 priority=2
 
