--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,12 +2,12 @@
 nodaemon=true
 
 [program:xvfb]
-command=/usr/bin/Xvfb :99 -screen 0 1920x1080x16
+command=/usr/bin/Xvfb :99 -screen 0 1280x800x16
 autorestart=true
 priority=1
 
 [program:x11vnc]
-command=/usr/bin/x11vnc -display :99 -forever -usepw
+command=/usr/bin/x11vnc -display :99 -forever -nopw
 autorestart=true
 priority=2
 
